# HCI-control_by_hand

./: CMakeLists.txt  README.md  main.cpp  test.cpp  tmp
include/: communication.h  cso.h  cv.h  host_controller.h  particle.h  utils.h
python/: main.py
src/: communication.cpp  cv.cpp  host_controller.cpp  particle.cpp  utils.cpp
